# jchip8-rs

./: Cargo.toml  LICENSE.md  README.md
src/: arch.rs  gfx.rs  main.rs
src/arch/: chip8.rs  emulator.rs  instruction_set.rs  mod.rs  opcode.rs
src/arch/chip8/: tests.rs
src/gfx/: drawable.rs  hardware.rs  interactible.rs  mockhardware.rs  mod.rs  screen.rs
