[package]
name = "jchip8-rs"
version = "0.1.0"
authors = ["Julian Gonzalez <jugonzalez12@gmail.com>"]
edition = "2021"
description = "A simple emulator for the Chip8 platform"
license = "MIT"
keywords = ["emulator", "chip8"]
readme = "README.md"
repository = "https://github.com/jugonz/jchip8-rs"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
rand = "0.8.5"
sdl2 = "0.37.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
